--- a/templates/_layout/base_account.html
+++ b/templates/_layout/base_account.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-{% block content %}
-{% endblock %}
-
+{% block breadcrumbs %}{% endblock %}
+{% block content %}{% endblock %}
 </body>
 </html>
