--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,19 +13,19 @@
                 {{ field.errors }}
             {% endfor %}
 
-            <div class="checkbox">
+            <div class="checkbox align-left">
                 <label>
-                    <input type="checkbox" value="remember-me"> Stay signed in
+                    <input type="checkbox" value="remember-me"> 保持登录
                 </label>
             </div>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
         </form>
         <p>
-            <a href="{% url "account:register" %}">Create Account</a>
+            <a href="{% url "account:register" %}">创建账号</a>
             |
-            <a href="/">Home Page</a>
+            <a href="/">主页</a>
         </p>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018 {{ SITE_NAME }}</p>
     </div>
 {% endblock %}
