--- a/templates/_layout/base_account.html
+++ b/templates/_layout/base_account.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
+{% load static %}<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-    {% load static %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
