--- a/templates/_layout/footer.html
+++ b/templates/_layout/footer.html
@@ -3,9 +3,8 @@
         <p class="float-right">
             <a href="#">Back to top</a>
         </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="#">Visit the homepage</a> or read our
-            <a href="#">getting started guide</a>.
+        <p>&copy; {{ SITE_NAME }}, 风险提示：{{ SITE_NAME }} 里任何用户或者嘉宾的发言，都有其特定立场，投资决策需要建立在独立思考之上!</p>
+        <p>New to {{ SITE_NAME }}? <a href="{% url 'account:register' %}">Register</a>.
         </p>
     </div>
 </footer>
