--- a/templates/_layout/nav.html
+++ b/templates/_layout/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom box-shadow">
-    <a class="navbar-brand" href="#">{{ SITE_NAME }}</a>
+    <a class="navbar-brand" href="/">{{ SITE_NAME }}</a>
     <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,7 +7,7 @@
     <div class="navbar-collapse offcanvas-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">主页 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">主页 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Notifications</a>
