--- a/templates/widgets/json_editor.html
+++ b/templates/widgets/json_editor.html
@@ -14,7 +14,7 @@
             try {
                 v = JSON.parse(v)
             } catch (e) {
-                v = v
+                // nothing todo
             }
             return v
         }
