--- a/templates/_layout/nav.html
+++ b/templates/_layout/nav.html
@@ -36,6 +36,8 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-settings">
                         <a class="dropdown-item" href="{% url 'wiki:concept-store' %}">创建词条</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'admin:index' %}">后台管理</a>
+                        <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'account:logout' %}">登出</a>
                     </div>
                 </li>
