--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -26,6 +26,6 @@
             |
             <a href="/">主页</a>
         </p>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018 {{ SITE_NAME }}</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2019 {{ SITE_NAME }}</p>
     </div>
 {% endblock %}
