--- a/templates/account/registration_form.html
+++ b/templates/account/registration_form.html
@@ -23,5 +23,7 @@
             <a href="{% url "account:login" %}">登录</a>
         </p>
 
+        <p class="mt-5 mb-3 text-muted">&copy; 2019 {{ SITE_NAME }}</p>
+
     </div> <!-- /container -->
 {% endblock %}
