--- a/templates/wiki/concept_list.html
+++ b/templates/wiki/concept_list.html
@@ -20,8 +20,7 @@
                             {{ concept.name }}
                         </a>
                         <span style="float: right" class="pb-3 mb-0 small lh-100">
-                            <a href="{% url 'wiki:concept-edit' concept.pk %}">编辑</a> |
-                            <a href="{% url 'wiki:concept-delete' concept.pk %}">删除</a>
+                            <a href="{% url 'wiki:concept-edit' concept.pk %}">编辑</a>
                         </span>
                     </h5>
                     <div class="pb-3 mb-0 small lh-125">
